--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,7 @@
       }
     ],
     "env": {
-      "DJANGO_SETTINGS_MODULE": "Apex_Engine.settings",
+      "DJANGO_SETTINGS_MODULE": "DREAM.settings",
       "PYTHONUNBUFFERED": "1"
     }
   }
